# f1-race-analytics

./: .env-template  .gitignore  README.md  database.db  pyproject.toml  run_test.sh
.github/workflows/: tests.yml
src/: jolpica_f1_data.py
src/f1_race_analytics/: __init__.py  __main__.py  app.py  database.py  f1_data.py  fake_server.py  jolpica_f1_data.py  live_api.py  models.py  open_f1_data.py  ui.py
src/f1_race_analytics/data/: replay.json
src/f1_race_analytics/datasources/: __init__.py  base.py  data_source.py  fake.py  sportmonks.py  sportsmonk.py
src/f1_race_analytics/static/: styles.css
src/f1_race_analytics/templates/: constructors_standings.html  drivers_standings.html  index.html  live_dashboard.html  replay_dashboard.html  results.html
src/f1_race_analytics/tests/: conftest.py  test_app.py  test_database.py  test_f1_data.py
