[project]
name = "f1-race-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniele", email = "danielerb.dev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
f1analytics = "f1_race_analytics.__main__:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ty>=0.0.17",
]
