[project]
name = "f1-race-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniele", email = "danielerb.dev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiomqtt>=2.5.1",
    "amqtt>=0.11.3",
    "datastar-py>=0.8.0",
    "fastapi[standard]>=0.133.1",
    "httpx>=0.28.1",
    "nicegui>=3.8.0",
    "paho-mqtt>=2.1.0",
    "python-decouple>=3.8",
    "sqlmodel>=0.0.34",
]

[project.scripts]
f1analytics = "f1_race_analytics.__main__:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ty>=0.0.17",
]
